# src/main/java/me/josecomparotto/contabilidade_pessoal/model/dto/conta/ContaEditDto.java
@@ -3,12 +3,13 @@ package me.josecomparotto.contabilidade_pessoal.model.dto.conta;
 import me.josecomparotto.contabilidade_pessoal.model.dto.IDto;
 import me.josecomparotto.contabilidade_pessoal.model.entity.Conta;
 import me.josecomparotto.contabilidade_pessoal.model.enums.TipoConta;
+import me.josecomparotto.contabilidade_pessoal.model.enums.TipoMovimento;
 
 public class ContaEditDto implements IDto<Conta> {
 
     private String descricao;
     private TipoConta tipo;
-    private boolean redutora;
+    private TipoMovimento tipoMovimento;
 
     public String getDescricao() {
         return descricao;
@@ -26,11 +27,11 @@ public class ContaEditDto implements IDto<Conta> {
         this.tipo = tipo;
     }
 
-    public boolean isRedutora() {
-        return redutora;
+    public TipoMovimento getTipoMovimento() {
+        return tipoMovimento;
     }
 
-    public void setRedutora(boolean redutora) {
-        this.redutora = redutora;
+    public void setTipoMovimento(TipoMovimento tipoMovimento) {
+        this.tipoMovimento = tipoMovimento;
     }
 }
