# src/main/java/me/josecomparotto/contabilidade_pessoal/model/enums/TipoMovimento.java
@@ -1,0 +1,7 @@
+package me.josecomparotto.contabilidade_pessoal.model.enums;
+
+public enum TipoMovimento {
+    NATURAL,
+    REDUTOR,
+    MISTO
+}
